# conecta-saude-backend

./: .env.example  .gitignore  BUILD.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_mvp.py
app/core/: config.py  exceptions.py  interfaces.py  logging.py
app/models/: __init__.py  patient.py
app/routers/: health_router.py  patient_router.py
app/services/: classification_service.py  llm_service.py  patient_service.py
src/: app.module.ts  app.service.ts
src/classification/: classification.module.ts  classification.service.ts
src/llm/: llm.module.ts  llm.service.ts
src/patient/: patient.controller.ts  patient.module.ts  patient.service.ts
